--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,16 @@
-- name: WordPress Plugin Deploy
-  # You may pin to the exact commit or the version.
-  # uses: 10up/action-wordpress-plugin-deploy@0dc3f76f710b55cd07aa546a77bc103a0f1f2f7a
-  uses: 10up/action-wordpress-plugin-deploy@1.5.0
-  with:
-    # Generate package zip file?
-    generate-zip: # optional
+- name: Deploy to WordPress.org
+  on:
+    push:
+      tags:
+      - "*"
+  jobs:
+   tag:
+      name: New tag
+      runs-on: ubuntu-latest
+      steps:
+      - name: WordPress Plugin Deploy
+        uses: 10up/action-wordpress-plugin-deploy@stable
+        env:
+          SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+          SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+          SLUG: gravity-forms-email-blacklist
