--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
-- name: Deploy to WordPress.org
-  on:
-    push:
-      tags:
+name: Deploy to WordPress.org
+on:
+  push:
+    tags:
       - "*"
-  jobs:
-   tag:
-      name: New tag
-      runs-on: ubuntu-latest
-      steps:
+jobs:
+  tag:
+    name: New tag
+    runs-on: ubuntu-latest
+    steps:
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@stable
         env:
